added two drafts of missing features

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,4 +8,11 @@
         android:orderInCategory="100"
         android:title="Add ingredients"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_recipe_list"
+        android:icon="@android:drawable/ic_dialog_info"
+        android:orderInCategory="100"
+        android:title="show"
+        app:showAsAction="always" />
 </menu>
