--- a/app/src/main/res/layout/activity_ingredient.xml
+++ b/app/src/main/res/layout/activity_ingredient.xml
@@ -16,11 +16,14 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView81"
+            android:id="@+id/txt_new_ingredients_headline"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:paddingBottom="7dp"
+            android:paddingTop="7dp"
             android:text="Add an ingredient"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textSize="60dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
