--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,12 +26,14 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/titleaaa"
+                android:id="@+id/txt_new_recipe_headline"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:paddingBottom="7dp"
+                android:paddingTop="7dp"
                 android:text="Convert a recipe"
-                android:textAlignment="center"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textSize="70dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -54,21 +56,21 @@
                 android:onClick="onClick"
                 android:src="@drawable/pan" />
         </LinearLayout>
+        <!--
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical|center_horizontal"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/btnPeoplePan"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:onClick="onClick"
-                android:src="@drawable/people" />
-        </LinearLayout>
-
+                    <ImageButton
+                        android:id="@+id/btnPeoplePan"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:onClick="onClick"
+                        android:src="@drawable/people" />
+                </LinearLayout>
+        -->
     </LinearLayout>
 
     <LinearLayout
