--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/background_repeated"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -10,16 +10,21 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="recipeconverter.org.recipeconverter.RecipeActivity">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/txt_recipe_headline"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp"
+        android:text="Your recipes!"
+        android:textSize="70dp" />
+    <!-- android:textSize="@dimen/abc_action_bar_default_height_material" -->
 
-        <ListView
-            android:id="@+id/lst_recipes"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+    <ListView
+        android:id="@+id/lst_recipes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
 
