--- a/app/src/main/res/menu/menu_conversion.xml
+++ b/app/src/main/res/menu/menu_conversion.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="recipeconverter.org.recipeconverter.ConversionActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_conversion_share"
+        android:icon="@android:drawable/ic_menu_share"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="Share it!"
+        app:showAsAction="always" />
 </menu>
