--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -9,7 +9,7 @@
     android:padding="20dp"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:weightSum="1"
-    tools:context="recipeconverter.org.recipeconverter.MainActivity">
+    tools:context="recipeconverter.org.recipeconverter.NewRecipeActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -256,18 +256,6 @@
 
             <EditText
                 android:id="@+id/editText42"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/spacePadding3"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/editText41"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
