--- a/app/src/main/res/menu/menu_new_recipe.xml
+++ b/app/src/main/res/menu/menu_new_recipe.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="recipeconverter.org.recipeconverter.MainActivity">
+    tools:context="recipeconverter.org.recipeconverter.NewRecipeActivity">
     <item
         android:id="@+id/action_add_ingredients"
         android:icon="@android:drawable/ic_menu_add"
