--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -2,8 +2,7 @@
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/RecipeRow"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="5dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/txt_recipe_id"
@@ -13,11 +12,10 @@
 
     <TextView
         android:id="@+id/txt_recipe_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.8"
         android:gravity="left"
-        android:paddingLeft="5dp"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -28,21 +26,5 @@
         android:layout_weight="0.2"
         android:gravity="right"
         android:textAppearance="?android:attr/textAppearanceLarge" />
-
-
-    <!--
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Modify"
-            android:id="@+id/buttonModifyRecipe"
-            android:layout_gravity="center_vertical" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Delete"
-            android:id="@+id/buttonDeleteRecipe"
-            android:layout_gravity="center_vertical" />-->
 
 </TableRow>
