--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -236,6 +236,15 @@
                 android:maxLength="5" />
         </LinearLayout>
 
+        <Button
+            android:id="@+id/btnAddIngredient"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:padding="10dp"
+            android:text="Add the ingredient" />
+
+<!--
         <LinearLayout
             android:id="@+id/spacePadding1"
             android:layout_width="fill_parent"
@@ -259,7 +268,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
-
+-->
 
     </LinearLayout>
 
