--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -237,12 +237,12 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/btnAddIngredient"
+            android:id="@+id/btnAddRecipe"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onClick"
             android:padding="10dp"
-            android:text="Add the ingredient" />
+            android:text="Add ingredients" />
 
 <!--
         <LinearLayout
