--- a/app/src/main/res/menu/menu_recipe.xml
+++ b/app/src/main/res/menu/menu_recipe.xml
@@ -8,4 +8,11 @@
         android:orderInCategory="100"
         android:title="Add a recipe"
         app:showAsAction="always" />
+        
+    <item
+        android:id="@+id/action_recipe_activity_search"
+        android:actionViewClass="android.widget.SearchView"
+        android:icon="@drawable/ic_search"
+        android:showAsAction="ifRoom|collapseActionView"
+        android:title="search"/>
 </menu>
