--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -39,7 +39,8 @@
         android:layout_height="wrap_content"
         android:gravity="left"
         android:paddingLeft="5dp"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="40dp" />
 
     <TextView
         android:id="@+id/txt_ingredient_id"
@@ -47,57 +48,4 @@
         android:layout_height="wrap_content"
         android:visibility="gone" />
 
-    <!--
-        <LinearLayout
-            android:id="@+id/layoutIngredientDetails"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:id="@+id/layoutIngredientName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.6"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:orientation="vertical">
-                <TextView
-                    android:id="@+id/txt_ingredient_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="5dp"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/layoutIngredientQuantity"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.4"
-                android:gravity="right"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/txt_ingredient_quantity"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="5dp"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
-
-                <TextView
-                    android:id="@+id/txt_ingredient_unit"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="5dp"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/txt_ingredient_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-             android:visibility="gone" />
-    -->
 </TableRow>
