--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -16,7 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.8"
         android:gravity="left"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="40dp" />
 
     <TextView
         android:id="@+id/txt_recipe_target"
