--- a/app/src/main/res/layout/activity_conversion.xml
+++ b/app/src/main/res/layout/activity_conversion.xml
@@ -138,6 +138,26 @@
                 android:maxLength="5" />
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/layoutConversionShapeDimUnit"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:text="Unit"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/spnConversionUnit"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </LinearLayout>
 
     <Button
