--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -2,7 +2,8 @@
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/RecipeRow"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical">
 
     <TextView
         android:id="@+id/txt_recipe_id"
@@ -16,16 +17,21 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.8"
         android:gravity="left"
+        android:paddingRight="10dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="40dp" />
 
-    <TextView
-        android:id="@+id/txt_recipe_target"
+    <ImageView
+        android:id="@+id/imgIconPan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_weight="0.2"
-        android:gravity="right"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        android:src="@drawable/icon_pan" />
+
+    <ImageView
+        android:id="@+id/imgIconPeople"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_people" />
 
 </TableRow>
