bug fixing: wrong people conversion

--- a/app/src/main/res/layout/activity_ingredient.xml
+++ b/app/src/main/res/layout/activity_ingredient.xml
@@ -29,6 +29,7 @@
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLength="40"
             android:text="Name"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
