--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -48,4 +48,10 @@
         android:layout_height="wrap_content"
         android:visibility="gone" />
 
+    <ImageButton
+        android:id="@+id/btnDeleteIngredient"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_delete" />
+
 </TableRow>
