--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -17,7 +17,7 @@
         android:gravity="center_horizontal"
         android:paddingBottom="15dp"
         android:paddingTop="15dp"
-        android:text="Your recipes!"
+        android:text="@string/headline_activity_recipe"
         android:textSize="70dp" />
 
     <ListView
