--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -3,9 +3,10 @@
     android:id="@+id/RecipeRow"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:divider="#000000"
     android:gravity="center_vertical">
 
-    <TextView
+<TextView
         android:id="@+id/txt_recipe_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
