--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -6,12 +6,24 @@
     android:divider="#000000"
     android:gravity="center_vertical">
 
-<TextView
+    <TextView
         android:id="@+id/txt_recipe_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone" />
 
+    <ImageButton
+        android:id="@+id/btnDeleteRecipe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_delete" />
+        
+    <ImageButton
+        android:id="@+id/btnEditRecipe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_edit" />
+        
     <TextView
         android:id="@+id/txt_recipe_name"
         android:layout_width="match_parent"
