--- a/app/src/main/res/layout/activity_ingredient.xml
+++ b/app/src/main/res/layout/activity_ingredient.xml
@@ -17,7 +17,7 @@
         android:gravity="center_horizontal"
         android:paddingBottom="7dp"
         android:paddingTop="7dp"
-        android:text="Add an ingredient"
+        android:text="@string/headline_activity_ingredient"
         android:textSize="60dp" />
 
     <LinearLayout
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLength="40"
-            android:text="Name"
+            android:text="@string/txt_name"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <EditText
@@ -49,7 +49,7 @@
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Quantity"
+            android:text="@string/txt_quantity"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <EditText
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:onClick="onClick"
         android:padding="10dp"
-        android:text="Add the ingredient" />
+        android:text="@string/txt_add_ingredient" />
 
     <LinearLayout
         android:layout_width="match_parent"
