--- a/app/src/main/res/layout/activity_conversion.xml
+++ b/app/src/main/res/layout/activity_conversion.xml
@@ -22,7 +22,7 @@
             android:gravity="center_horizontal"
             android:paddingBottom="7dp"
             android:paddingTop="7dp"
-            android:text="Convert ingredients"
+            android:text="#string/headline_activity_conversion"
             android:textSize="60dp" />
 
         <LinearLayout
@@ -36,7 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
-                android:text="How many people"
+                android:text="@string/txt_how_many_people"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold" />
 
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
-                android:text="Pan shape"
+                android:text="@string/txt_pan_shape"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold" />
 
@@ -81,7 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
-                android:text="Diameter"
+                android:text="@string/txt_diameter"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold" />
 
@@ -105,7 +105,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
-                android:text="Side"
+                android:text="@string/txt_side"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold" />
 
@@ -128,7 +128,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
-                android:text="Size"
+                android:text="@string/txt_size"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold" />
 
@@ -146,7 +146,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:text="x"
+                android:text="@string/txt_times"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold" />
 
@@ -170,7 +170,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
-                android:text="Unit"
+                android:text="@string/txt_unit"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold" />
 
@@ -187,7 +187,7 @@
         android:layout_height="wrap_content"
         android:onClick="onClick"
         android:padding="10dp"
-        android:text="Convert" />
+        android:text="@string/txt_convert" />
 
     <LinearLayout
         android:layout_width="fill_parent"
