--- a/app/src/main/res/layout/activity_conversion.xml
+++ b/app/src/main/res/layout/activity_conversion.xml
@@ -22,7 +22,7 @@
             android:gravity="center_horizontal"
             android:paddingBottom="7dp"
             android:paddingTop="7dp"
-            android:text="#string/headline_activity_conversion"
+            android:text="@string/headline_activity_conversion"
             android:textSize="60dp" />
 
         <LinearLayout
