--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -16,14 +16,16 @@
         android:id="@+id/btnDeleteRecipe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_delete" />
+        android:src="@android:drawable/ic_menu_delete"
+        android:visibility="gone" />
 
     <ImageButton
         android:id="@+id/btnEditRecipe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_edit" />
-        
+        android:src="@android:drawable/ic_menu_edit"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/txt_recipe_name"
         android:layout_width="match_parent"
