--- a/app/src/main/res/layout/activity_ingredient.xml
+++ b/app/src/main/res/layout/activity_ingredient.xml
@@ -29,7 +29,7 @@
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxLength="40"
+            android:layout_marginRight="10dp"
             android:text="@string/txt_name"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -37,6 +37,10 @@
             android:id="@+id/txtIngredientName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="40"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:layout_weight="1"
             android:hint="Type the ingredient name here!" />
     </LinearLayout>
 
@@ -49,6 +53,7 @@
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
             android:text="@string/txt_quantity"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -58,6 +63,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="numberDecimal"
+            android:layout_weight="1"
             android:maxLength="6" />
 
         <Spinner
@@ -84,4 +90,5 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
+
 </LinearLayout>
