--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -6,8 +6,6 @@
     android:background="@drawable/background_repeated"
     android:orientation="vertical"
     android:padding="20dp"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:weightSum="1"
     tools:context="recipeconverter.org.recipeconverter.NewRecipeActivity">
 
     <TextView
@@ -15,9 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:paddingBottom="7dp"
-        android:paddingTop="7dp"
-        android:text="@string/headline_activity_conversion"
+        android:text="@string/headline_activity_main"
         android:textSize="70dp" />
 
     <LinearLayout
@@ -28,22 +24,27 @@
 
         <ImageButton
             android:id="@+id/btnPeople"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
             android:onClick="onClick"
-            android:src="@drawable/people" />
+            android:layout_height="100dp"
+            android:layout_width="100dp"
+            android:background="#00FFFFFF"
+            android:src="@drawable/icon_people2" />
 
         <ImageButton
             android:id="@+id/btnPan"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
             android:onClick="onClick"
-            android:src="@drawable/pan" />
+            android:layout_height="100dp"
+            android:background="#00FFFFFF"
+            android:layout_width="100dp"
+            android:src="@drawable/icon_pan2" />
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/layoutNewRecipeName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:visibility="gone"
         android:orientation="horizontal">
 
         <TextView
@@ -60,6 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Type the recipe name here!"
+            android:layout_weight="1"
             android:maxLength="40"
             android:maxLines="1"
             android:singleLine="true" />
@@ -85,6 +87,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
+            android:layout_weight="1"
             android:maxLength="2" />
     </LinearLayout>
 
@@ -105,6 +108,7 @@
 
         <Spinner
             android:id="@+id/txtRecipePan"
+            android:layout_weight="1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -131,6 +135,7 @@
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:maxLength="5"
+            android:layout_weight="1"
             android:maxLines="1" />
     </LinearLayout>
 
@@ -153,6 +158,7 @@
             android:id="@+id/txtRecipeSide"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:inputType="numberDecimal"
             android:maxLength="5" />
     </LinearLayout>
@@ -176,13 +182,13 @@
             android:id="@+id/txtRecipeSide1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.4"
+            android:layout_weight="1"
             android:inputType="numberDecimal"
             android:maxLength="5" />
 
         <TextView
             android:id="@+id/textView7"
-            android:layout_width="20dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -194,7 +200,7 @@
             android:id="@+id/txtRecipeSide2"
             android:layout_width="20dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.4"
+            android:layout_weight="1"
             android:inputType="numberDecimal"
             android:maxLength="5" />
     </LinearLayout>
@@ -216,6 +222,8 @@
 
         <Spinner
             android:id="@+id/spnRecipeUnit"
+            android:paddingTop="20dp"
+            android:layout_weight="1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -224,8 +232,8 @@
         android:id="@+id/btnAddRecipe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:onClick="onClick"
-        android:padding="10dp"
         android:text="@string/txt_add_ingredients" />
 
 </LinearLayout>
