--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/IngredietRow"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:gravity="center_vertical"
+    android:orientation="horizontal" >
 
     <TextView
         android:id="@+id/txt_ingredient_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="right"
         android:paddingLeft="5dp"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -20,7 +18,6 @@
         android:id="@+id/txt_ingredient_unit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="right"
         android:paddingLeft="5dp"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -28,25 +25,25 @@
         android:id="@+id/txt_ingredient_space"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left"
         android:paddingLeft="5dp"
         android:text=" - "
         android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/txt_ingredient_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:layout_weight="1"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="40dp" />
 
     <ImageButton
         android:id="@+id/btnDeleteIngredient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#FFFFFFFF"
         android:src="@android:drawable/ic_menu_delete" />
-
-    <TextView
-        android:id="@+id/txt_ingredient_name"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="left"
-        android:paddingLeft="5dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="40dp" />
 
     <TextView
         android:id="@+id/txt_ingredient_id"
@@ -54,4 +51,4 @@
         android:layout_height="wrap_content"
         android:visibility="gone" />
 
-</TableRow>
+</LinearLayout>
