--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -1,36 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/RecipeRow"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:divider="#000000"
-    android:gravity="center_vertical">
+    android:descendantFocusability="blocksDescendants"
+    android:gravity="center_vertical"
+    android:orientation="horizontal" >
 
     <TextView
         android:id="@+id/txt_recipe_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone" />
-<!--
-    <ImageButton
-        android:id="@+id/btnDeleteRecipe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_delete"
-        android:visibility="gone" />
 
-    <ImageButton
-        android:id="@+id/btnEditRecipe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_edit"
-        android:visibility="gone" />
--->
     <TextView
         android:id="@+id/txt_recipe_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.8"
+        android:layout_weight="1"
         android:gravity="left"
         android:paddingRight="10dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -38,14 +25,16 @@
 
     <ImageView
         android:id="@+id/imgIconPan"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/icon_pan" />
 
     <ImageView
         android:id="@+id/imgIconPeople"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/icon_people" />
 
-</TableRow>
+</LinearLayout>
