--- a/app/src/main/res/layout/activity_conversion.xml
+++ b/app/src/main/res/layout/activity_conversion.xml
@@ -23,7 +23,7 @@
             android:paddingBottom="7dp"
             android:paddingTop="7dp"
             android:text="@string/headline_activity_conversion"
-            android:textSize="60dp" />
+            android:textSize="50dp" />
 
         <LinearLayout
             android:id="@+id/layoutConvertedHowManyPeople"
@@ -190,6 +190,8 @@
         android:layout_height="wrap_content"
         android:onClick="onClick"
         android:padding="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:text="@string/txt_convert" />
 
     <LinearLayout
