--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
+    android:padding="5dp"
     android:gravity="center_vertical"
     android:orientation="horizontal" >
 
@@ -36,7 +37,7 @@
         android:gravity="left"
         android:layout_weight="1"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="40dp" />
+        android:textSize="30dp" />
 
     <ImageButton
         android:id="@+id/btnDeleteIngredient"
