fixes: - conversions between different shapes - going back in the main screen - checked titles - inch unit was not loaded correctly

--- a/app/src/main/res/menu/menu_ingredient.xml
+++ b/app/src/main/res/menu/menu_ingredient.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/action_ingredient_discard"
         android:orderInCategory="100"
-        android:icon="@android:drawable/ic_menu_delete"
+        android:icon="@android:drawable/ic_menu_close_clear_cancel"
         android:title="Discard"
         app:showAsAction="always" />
     <item
